--- a/main.css
+++ b/main.css
@@ -1,50 +1,1 @@
-#svg *, .noselect * {
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-#waitform {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 10000;
-    cursor: wait;
-}
-
-a {
-    color: gray;
-}
-
-em {
-    border: 1px rgba(0, 0, 0, 0.2) solid;
-    font-style: normal;
-    padding: 0px 3px;
-    background-color: rgba(0, 0, 0, 0.08);
-    border-radius: 3px;
-}
-
-body {
-    font-family: Georgia;
-}
-
-h6 {
-    font-size: 100%;
-    font-weight: normal;
-    margin: 0px;
-}
-
-p {
-    font-size: 80%;
-    margin-top: 5px;
-    margin-bottom: 0px;
-}
-
-.control_panel {
-    padding: 15px;
-    padding-bottom: 0px;
-    position: absolute;
-    z-index: 10;
-}
+a{color:gray;}[class~=noselect] *,#svg *{-moz-user-select:none;}em{border-left-width:.010416667in;}em{border-bottom-width:.010416667in;}[class~=noselect] *,#svg *{-webkit-user-select:none;}em{border-right-width:.010416667in;}#svg *,[class~=noselect] *{-khtml-user-select:none;}em{border-top-width:.010416667in;}em{border-left-style:solid;}#svg *,[class~=noselect] *{-ms-user-select:none;}[class~=noselect] *,#svg *{user-select:none;}em{border-bottom-style:solid;}.control_panel,#waitform{position:absolute;}#waitform{width:100%;}em{border-right-style:solid;}em{border-top-style:solid;}#waitform{height:100%;}em{border-left-color:rgba(0,0,0,.2);}em{border-bottom-color:rgba(0,0,0,.2);}em{border-right-color:rgba(0,0,0,.2);}em{border-top-color:rgba(0,0,0,.2);}em{border-image:none;}em{font-style:normal;}em{padding-left:2.25pt;}em{padding-bottom:0in;}em{padding-right:2.25pt;}#waitform{z-index:10000;}em{padding-top:0in;}em{background-color:rgba(0,0,0,.08);}em{border-radius:3px;}body{font-family:Georgia;}h6{font-size:100%;}.control_panel{padding-left:11.25pt;}#waitform{cursor:wait;}h6{font-weight:normal;}h6{margin-left:0in;}.control_panel{padding-bottom:0in;}h6{margin-bottom:0in;}h6{margin-right:0in;}h6{margin-top:0in;}p{font-size:80%;}.control_panel{padding-right:11.25pt;}p{margin-top:5px;}.control_panel{padding-top:11.25pt;}p{margin-bottom:0pt;}.control_panel{z-index:10;}
