--- a/dice/dice.css
+++ b/dice/dice.css
@@ -1,165 +1,1 @@
-.center_field {
-    position: absolute;
-    text-align: center;
-    height: 100%;
-    width: 100%;
-}
-
-.center_field * {
-    position: relative;
-    font-family: Trebuchet MS;
-    background-color: rgba(255, 255, 255, 0.6);
-    padding: 5px 15px;
-}
-
-.center_field br {
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.bottom_field {
-    position: absolute;
-    text-align: center;
-    bottom: 5px;
-    width: inherit;
-    padding: 0px;
-}
-
-#label {
-    font-size: 32pt;
-    word-spacing: 0.5em;
-    padding: 5px 15px;
-    color: rgba(21, 26, 26, 0.6);
-    top: 45%;
-}
-
-#labelhelp {
-    font-size: 12pt;
-    padding: 5px 15px;
-    color: rgba(21, 26, 26, 0.5);
-    bottom: 50px;
-}
-
-#set {
-    text-align: center;
-    font-size: 26pt;
-    border: none;
-    color: rgba(0, 0, 0, 0.8);
-    background-color: rgba(255, 255, 255, 0);
-    top: 60%;
-}
-
-#sethelp {
-    font-size: 12pt;
-    color: rgba(21, 26, 26, 0.5);
-    background: none;
-    top: 25%;
-}
-
-#selector_div button {
-    font-size: 20pt;
-    color: rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.6);
-    cursor: pointer;
-    border: none;
-    width: 5em;
-    top: 62%;
-}
-
-.dice_place {
-    position: absolute;
-    border: solid black 1px;
-}
-
-#label_last {
-    font-size: 14pt;
-    word-spacing: 0.1em;
-    color: rgba(21, 26, 26, 0.5);
-    cursor: default;
-}
-
-#label_last_title {
-    font-size: 14pt;
-    word-spacing: 0.1em;
-    color: rgba(21, 26, 26, 0.5);
-    cursor: default;
-    padding-bottom: 0.1em;
-}
-
-button {
-    background-color: rgba(255, 255, 255, 0.0);
-    color: rgba(0, 0, 0, 0.6);
-    cursor: pointer;
-    border: none;
-    width: auto;
-    margin: 10px 0 0 0;
-    font-family: Roboto,sans-serif;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-size: .875rem;
-    font-weight: 500;
-    letter-spacing: .08929em;
-    text-decoration: none;
-    text-transform: uppercase;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    will-change: transform,opacity;
-    padding: 0 8px;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    position: relative;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    min-width: 64px;
-    min-height: 28px;
-    border: none;
-    outline: none;
-    line-height: inherit;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-appearance: none;
-    overflow: hidden;
-    vertical-align: middle;
-    border-radius: 2px;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-    transition: box-shadow .28s cubic-bezier(.4,0,.2,1),-webkit-box-shadow .28s cubic-bezier(.4,0,.2,1);
-}
-
-button:hover {
-    box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
-}
-
-#results {
-    display: none;
-}
-
-#results {
-    position: relative;
-    font-family: Trebuchet MS;
-    background-color: rgba(255, 255, 255, 0.6);
-    padding: 5px 15px;
-}
-
-/* width */
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: #f1f1f188; 
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: #77777788; 
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #55555588; 
-}
+#label{font-size:2.666666667pc;}#label{word-spacing:.5em;}button{background-color:rgba(255,255,255,0);}.center_field{position:absolute;}#set,.center_field{text-align:center;}button{color:rgba(0,0,0,.6);}#selector_div button{font-size:20pt;}[class~=center_field] *,#label,#labelhelp{padding-left:.15625in;}#selector_div button,button{cursor:pointer;}button,#set,#selector_div button{border-left-width:medium;}button,#selector_div button,#set{border-bottom-width:medium;}[class~=center_field] *,#label,#labelhelp{padding-bottom:.052083333in;}.center_field{height:100%;}#selector_div button{color:#fff;}[class~=center_field] *,#labelhelp,#label{padding-right:.15625in;}.center_field{width:100%;}#set,button,#selector_div button{border-right-width:medium;}#labelhelp,#label{padding-top:.052083333in;}#label{color:rgba(21,26,26,.6);}button,#selector_div button,#set{border-top-width:medium;}#set,#selector_div button,button{border-left-style:none;}[class~=center_field] *{position:relative;}#label{top:45%;}#labelhelp{font-size:16px;}#selector_div button{background-color:rgba(0,0,0,.6);}[class~=center_field] *{font-family:Trebuchet MS;}button,#set,#selector_div button{border-bottom-style:none;}#labelhelp{color:rgba(21,26,26,.5);}#selector_div button,#set,button{border-right-style:none;}#labelhelp{bottom:37.5pt;}#set,#selector_div button,button{border-top-style:none;}#set,button{border-left-color:currentColor;}#set{font-size:34.666666667px;}[class~=center_field] *{background-color:rgba(255,255,255,.6);}#set,button{border-bottom-color:currentColor;}#set,button{border-right-color:currentColor;}button,#set{border-top-color:currentColor;}#set,button{border-image:none;}button{width:auto;}button{margin-left:0;}button{margin-bottom:0;}button{margin-right:0;}button{margin-top:10px;}button{font-family:Roboto,sans-serif;}button{-moz-osx-font-smoothing:grayscale;}[class~=center_field] *{padding-top:.3125pc;}.dice_place,[class~=bottom_field]{position:absolute;}button{-webkit-font-smoothing:antialiased;}button{font-size:.875rem;}[class~=bottom_field]{text-align:center;}[class~=bottom_field]{bottom:.052083333in;}button{font-weight:500;}button{letter-spacing:.08929em;}[class~=bottom_field]{width:inherit;}button{text-decoration:none;}[class~=bottom_field]{padding-left:0pt;}button{text-transform:uppercase;}.center_field br{background-color:rgba(0,0,0,0);}[class~=bottom_field]{padding-bottom:0pt;}button{-webkit-tap-highlight-color:rgba(0,0,0,0);}#set{color:rgba(0,0,0,.8);}button{will-change:transform,opacity;}#selector_div button{border-left-color:currentColor;}[class~=bottom_field]{padding-right:0pt;}[class~=bottom_field]{padding-top:0pt;}.dice_place{border-left-width:.010416667in;}button{padding-left:.5pc;}.dice_place{border-bottom-width:.010416667in;}button{padding-bottom:0;}::-webkit-scrollbar{width:5px;}button{padding-right:.5pc;}#set{background-color:rgba(255,255,255,0);}#selector_div button{border-bottom-color:currentColor;}.dice_place{border-right-width:.010416667in;}#set{top:60%;}.dice_place{border-top-width:.010416667in;}#sethelp{font-size:16px;}#sethelp,#label_last,#label_last_title{color:rgba(21,26,26,.5);}#selector_div button{border-right-color:currentColor;}#selector_div button{border-top-color:currentColor;}#sethelp{background:none;}button{padding-top:0;}#sethelp{top:25%;}.dice_place{border-left-style:solid;}#label_last,#label_last_title{font-size:1.166666667pc;}#label_last_title,#label_last{word-spacing:.1em;}#selector_div button{border-image:none;}button{display:-ms-inline-flexbox;}::-webkit-scrollbar-track{background:#f1f1f1;}.dice_place{border-bottom-style:solid;}#selector_div button{width:5em;}button{display:inline-flex;}.dice_place{border-right-style:solid;}button:hove
