--- a/dice/dice.css
+++ b/dice/dice.css
@@ -71,14 +71,14 @@
 }
 
 #label_last {
-    font-size: 14pt;
+    font-size: 1.6em;
     word-spacing: 0.1em;
     color: rgba(21, 26, 26, 0.5);
     cursor: default;
 }
 
 #label_last_title {
-    font-size: 14pt;
+    font-size: 1.6em;
     word-spacing: 0.1em;
     color: rgba(21, 26, 26, 0.5);
     cursor: default;
@@ -135,14 +135,68 @@ button:hover {
 
 #results {
     display: none;
-}
-
-#results {
     position: relative;
     font-family: Trebuchet MS;
     background-color: rgba(255, 255, 255, 0.6);
-    padding: 5px 15px;
+    padding: 5px 15px 15px 15px;
 }
+
+@media only screen and (max-device-width : 640px) {
+        #results {
+            font-size: 2em;
+        }
+        #limpar_historia {
+            width: 100%;
+            font-size: 1.6em !important;
+            min-height: 38px;
+        }
+        #labelhelp {
+            font-size: 3em;
+            bottom: 5vh;
+        }
+        #label {
+            font-size: 6em;
+        }
+        #sethelp {
+            font-size: 3em;
+        }
+        #clear, #throw {
+            font-size: 3.6em !important;
+            min-height: 38px;
+        }
+        #set {
+            font-size: 6em;
+        }
+    }
+    
+    @media only screen and (max-device-width: 768px) {
+        #results {
+            font-size: 2em;
+        }
+        #limpar_historia {
+            width: 100%;
+            font-size: 1.6em !important;
+            min-height: 38px;
+        }
+        #labelhelp {
+            font-size: 3em;
+            bottom: 5vh;
+        }
+        #label {
+            font-size: 6em;
+        }
+
+        #sethelp {
+            font-size: 3em;
+        }
+        #clear, #throw {
+            font-size: 3.6em !important;
+            min-height: 38px;
+        }
+        #set {
+            font-size: 6em;
+        }
+    }
 
 /* width */
 ::-webkit-scrollbar {
