--- a/dice/dice.css
+++ b/dice/dice.css
@@ -16,6 +16,22 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
+input[type="color"] {
+    opacity: 0;
+    display: none;
+    /* width: 32px;
+    height: 32px;
+    border: none; */
+}
+
+#color-picker-wrapper {
+    position: absolute;
+    margin: 20px;
+    width: 200px;
+    height: 50px;
+    font-size: x-large;
+}
+
 .bottom_field {
     position: absolute;
     text-align: center;
